@@ -68,6 +68,7 @@ struct conf {
 	int	foreground;
 	int	port;
 	int	ipv6;
+	uint32_t protos;
 };
 
 extern struct conf conf;
