@@ -1,6 +1,9 @@
 ipv6 on         # enable ipv6
 daemon on       # enable daemon mode
 
+# decomment to allow only TLSv1.3
+#protocols "tlsv1.3"
+
 # server block example
 server "example.com" {
 	cert "/path/to/cert.pem"
